--- a/portality/templates/leaps/interviews/form.html
+++ b/portality/templates/leaps/interviews/form.html
@@ -369,7 +369,7 @@ td > p {
                     {% if current_user.view_admin %}
                     <tr>
                         <td></td>
-                        <td><input type="submit" name="submit" class="btn btn-primary" value="Save checker notes"></td>
+                        <td><input type="submit" name="submit_checker_notes" class="btn btn-primary" value="Save checker notes"></td>
                     </tr>
                     {% endif %}
 
