better perform interviews

--- a/portality/templates/account/all.html
+++ b/portality/templates/account/all.html
@@ -14,7 +14,8 @@
           <a href="?users=view_admin">{{ userstats.view_admin }}</a> users who can only view admin, 
           <a href="?users=school">{{ userstats.school_users }}</a> school accounts, 
           <a href="?users=institution">{{ userstats.institution_users }}</a> institution accounts,
-          and <a href="?users=perform_interviews">{{ userstats.perform_interviews }}</a> interviewer accounts.</p>
+          <a href="?users=perform_interviews">{{ userstats.perform_interviews }}</a> interviewer accounts,</p>
+          and <a href="?users=perform_and_manage_interviewers">{{ userstats.perform_and_manage_interviewers }}</a> interviewer manager accounts.</p>
     {% endif %}
     {% if showing %}
     <p>Showing {{ showing }} users.</p>
