--- a/portality/templates/account/view.html
+++ b/portality/templates/account/view.html
@@ -43,7 +43,7 @@
                     <p><input name="institution" type="text" value="{{account.data.institution}}" disabled="disabled"></p>
                 {% endif %}
                 {% if account.data.perform_interviews or account.data.perform_and_manage_interviewers %}
-                    <p>This account can perform perform interviews.</p>
+                    <p>This account can perform interviews.</p>
                     {% if account.data.perform_and_manage_interviewers %}
                     <p>This account can also manage interviewers.</p>
                     {% endif %}
