--- a/portality/templates/leaps/admin/students.html
+++ b/portality/templates/leaps/admin/students.html
@@ -10,7 +10,7 @@
             <a id="print" class="btn" href="/admin/student/selected.pdf">Print selected</a>
             {% if current_user.edit_students or current_user.perform_and_manage_interviewers %}
             <br>
-            <a id="interviewers" class="btn btn-primary" href="/admin/assign">Assign interviewer</a>
+            <a id="interviewers" class="btn btn-primary" href="/admin/assign">Allocate interviewer</a>
             <select id="assign" style="display: none;">
                 <option></option>
             {% for name in interviewers %}
