--- a/portality/templates/leaps/interviews/allocate.html
+++ b/portality/templates/leaps/interviews/allocate.html
@@ -23,7 +23,7 @@ jQuery(document).ready(function() {
         });
         var loc = $(this).attr('href');
         if ( selected.length > 0 ) {
-            loc += '?selected=' + JSON.stringify(selected);
+            loc += '?selected=' + selected.join(',');
             window.location = loc;
         }
     }
