fix survey for estranged age and cared for

--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -891,7 +891,7 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
 		  more information.
 
 		  <div id="more_estranged" style="display:none;">
-		  <select name="claimed_estranged_age">
+		  <select id="claimed_estranged_age" name="claimed_estranged_age">
 			<option></option>
 			<option>Under 16</option>
 			<option>16</option>
@@ -900,7 +900,7 @@ p.pregrey > span > span > span > span.select2-selection__rendered {
 		  </select>
 		  How old were you when you became estranged?
 
-		  <select name="claimed_estranged_cared_for">
+		  <select id="claimed_estranged_cared_for" name="claimed_estranged_cared_for">
 			<option></option>
 			<option>Yes</option>
 			<option>No</option>
